# flight-management-system

./: .gitignore  CMakeLists.txt  README.md
src/: airline.cpp  airline.h  flight.cpp  flight.h  main.cpp  passenger.cpp  passenger.h  passengers.txt  route.cpp  route.h  seat.cpp  seat.h
